Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17939

Assertion `++loop_count < 2' failed in trx_undo_report_rename

    XMLWordPrintable

Details

    Description

      10.4 fac997feef048de877e39d1366871d5872c61710

      mysqld: /home/travis/src/storage/innobase/trx/trx0rec.cc:1999: dberr_t trx_undo_report_rename(trx_t*, const dict_table_t*): Assertion `++loop_count < 2' failed.
      181208  6:43:27 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f1021b01c82 in __assert_fail () from /lib/x86_64-linux-gnu/libc.so.6
      #8  0x00005634c86b0167 in trx_undo_report_rename (trx=0x7f100c188518, table=0x7f101c7b8068) at /home/travis/src/storage/innobase/trx/trx0rec.cc:1999
      #9  0x00005634c861714a in row_rename_table_for_mysql (old_name=0x7f101c8762a0 "test/FTS_", '0' <repeats 13 times>, "6f3_CONFIG", new_name=0x7f101e33dfe8 "test/#sql-ib1782-3932461062", trx=0x7f100c188518, commit=false) at /home/travis/src/storage/innobase/row/row0mysql.cc:4288
      #10 0x00005634c861525d in row_drop_table_for_mysql (name=0x7f10201b54e0 "test/FTS_", '0' <repeats 13 times>, "6f3_CONFIG", trx=0x7f100c188518, sqlcom=SQLCOM_DROP_DB, create_failed=false, nonatomic=false) at /home/travis/src/storage/innobase/row/row0mysql.cc:3522
      #11 0x00005634c8804f34 in fts_drop_table (trx=0x7f100c188518, table_name=0x7f10201b54e0 "test/FTS_", '0' <repeats 13 times>, "6f3_CONFIG") at /home/travis/src/storage/innobase/fts/fts0fts.cc:1470
      #12 0x00005634c88055bf in fts_drop_common_tables (trx=0x7f100c188518, fts_table=0x7f10201b57b0) at /home/travis/src/storage/innobase/fts/fts0fts.cc:1609
      #13 0x00005634c880587b in fts_drop_tables (trx=0x7f100c188518, table=0x7f101e29f9f8) at /home/travis/src/storage/innobase/fts/fts0fts.cc:1721
      #14 0x00005634c86143e8 in row_drop_ancillary_fts_tables (table=0x7f101e29f9f8, trx=0x7f100c188518) at /home/travis/src/storage/innobase/row/row0mysql.cc:3221
      #15 0x00005634c861577a in row_drop_table_for_mysql (name=0x7f10201b62a0 "test/#sql-5d69_10", trx=0x7f100c188518, sqlcom=SQLCOM_TRUNCATE, create_failed=true, nonatomic=false) at /home/travis/src/storage/innobase/row/row0mysql.cc:3713
      #16 0x00005634c84c805d in ha_innobase::create (this=0x7f101c11af08, name=0x7f10201b918d "./test/#sql-5d69_10", form=0x7f10201b67a0, create_info=0x7f10201b9510, file_per_table=true, trx=0x7f100c188518) at /home/travis/src/storage/innobase/handler/ha_innodb.cc:12606
      #17 0x00005634c84b3ab7 in ha_innobase::create (this=0x7f101c11af08, name=0x7f10201b918d "./test/#sql-5d69_10", form=0x7f10201b67a0, create_info=0x7f10201b9510) at /home/travis/src/storage/innobase/handler/ha_innodb.cc:12651
      #18 0x00005634c8294408 in handler::ha_create (this=0x7f101c11af08, name=0x7f10201b918d "./test/#sql-5d69_10", form=0x7f10201b67a0, info_arg=0x7f10201b9510) at /home/travis/src/sql/handler.cc:4595
      #19 0x00005634c8295490 in ha_create_table (thd=0x7f101c58bab0, path=0x7f10201b918d "./test/#sql-5d69_10", db=0x7f101c539ec0 "test", table_name=0x7f10201b8cca "#sql-5d69_10", create_info=0x7f10201b9510, frm=0x7f10201b7bb0) at /home/travis/src/sql/handler.cc:4969
      #20 0x00005634c805cf07 in mysql_alter_table (thd=0x7f101c58bab0, new_db=0x7f101c590168, new_name=0x7f101c590538, create_info=0x7f10201b9510, table_list=0x7f101c539888, alter_info=0x7f10201b9450, order_num=0, order=0x0, ignore=false) at /home/travis/src/sql/sql_table.cc:9745
      #21 0x00005634c80e6faa in Sql_cmd_alter_table::execute (this=0x7f101c53a480, thd=0x7f101c58bab0) at /home/travis/src/sql/sql_alter.cc:497
      #22 0x00005634c7f84c0f in mysql_execute_command (thd=0x7f101c58bab0) at /home/travis/src/sql/sql_parse.cc:6290
      #23 0x00005634c7f89e08 in mysql_parse (thd=0x7f101c58bab0, rawbuf=0x7f101c5395e8 "ALTER TABLE `table17_innodb_int_autoinc` ADD FOREIGN KEY e (tscol6) REFERENCES t8 (scol10) ON DELETE CASCADE, ADD CONSTRAINT CHECK (`col_bigint_not_null` < 1)  /* QNO 17285 CON_ID 16 */", length=185, parser_state=0x7f10201ba650, is_com_multi=false, is_next_command=false) at /home/travis/src/sql/sql_parse.cc:8092
      #24 0x00005634c7f76db6 in dispatch_command (command=COM_QUERY, thd=0x7f101c58bab0, packet=0x7f101c5918d1 "ALTER TABLE `table17_innodb_int_autoinc` ADD FOREIGN KEY e (tscol6) REFERENCES t8 (scol10) ON DELETE CASCADE, ADD CONSTRAINT CHECK (`col_bigint_not_null` < 1)  /* QNO 17285 CON_ID 16 */ ", packet_length=186, is_com_multi=false, is_next_command=false) at /home/travis/src/sql/sql_parse.cc:1851
      #25 0x00005634c7f757d3 in do_command (thd=0x7f101c58bab0) at /home/travis/src/sql/sql_parse.cc:1396
      #26 0x00005634c80e0fea in do_handle_one_connection (connect=0x5634ca3954b0) at /home/travis/src/sql/sql_connect.cc:1402
      #27 0x00005634c80e0d3b in handle_one_connection (arg=0x5634ca3954b0) at /home/travis/src/sql/sql_connect.cc:1308
      #28 0x00007f10227466ba in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
      #29 0x00007f1021bdb41d in clone () from /lib/x86_64-linux-gnu/libc.so.6
      

      The test case and notes to it are in mleich 's comment

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5d
                  2.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.